--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,15 @@ project/
 .classpath
 .project
 .settings/
-war/WEB-INF/
 
+war/WEB-INF/appengine-web.xml
+war/WEB-INF/logging.properties
+war/WEB-INF/web.xml
+
+war/WEB-INF/lib/
+
+war/WEB-INF/classes/META-INF/
+war/WEB-INF/classes/log4j.properties
 
 package.json
 server.js
