--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "WebPaige Webserver",
   "main": "server.js",
   "dependencies": {
-    "express": "~3.0.0rc5"
+    "express": "~3.0.0rc5",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-concat": "~0.4.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
