--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "~3.0.0rc5",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-concat": "~0.4.0"
+    "grunt-contrib-concat": "~0.4.0",
+    "http-proxy": "~1.1.6"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
