--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "bootstrap-datepicker": "~1.3.0",
     "bootstrap-timepicker": "~0.2.6",
     "underscore": "~1.6.0",
-    "jquery-form": "~3.46.0"
+    "jquery-form": "~3.46.0",
+    "angular-md5": "~0.1.7"
   },
   "devDependencies": {}
 }
