--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "grunt-regarde": "~0.1.1",
     "grunt-contrib-sass": "~0.3.0",
     "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-htmlmin": "~0.1.3"
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-contrib-compass": "*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
