--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "bootstrap-timepicker": "~0.2.6",
     "underscore": "~1.6.0",
     "jquery-form": "~3.46.0",
-    "angular-md5": "~0.1.7"
+    "angular-md5": "~0.1.7",
+    "bootstrap-daterangepicker": "~1.3.13"
   },
   "devDependencies": {}
 }
