Replace rev, fix usemin option

--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "grunt-contrib-uglify": "*",
     "grunt-contrib-watch": "*",
     "grunt-conventional-changelog": "*",
+    "grunt-filerev": "^2.1.0",
     "grunt-karma": "*",
     "grunt-ng-annotate": "^0.4.0",
     "grunt-release": "*",
     "grunt-replace": "*",
-    "grunt-rev": "*",
     "grunt-usemin": "*",
     "karma": "*",
     "karma-chrome-launcher": "*",
