--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,9 @@
     "jquery-form": "~3.46.0",
     "angular-md5": "~0.1.7",
     "bootstrap-daterangepicker": "~1.3.13",
-    "bootstrap-chosen": "*"
+    "bootstrap-chosen": "*",
+    "es5-shim": "~4.0.3",
+    "json3": "~3.3.2"
   },
   "devDependencies": {}
 }
