--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,10 @@ indent_size = 2
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
-insert_final_newline = true
+
+[*.jade]
+indent_style = tab
+trim_trailing_whitespace = false
 
 [*.md]
 trim_trailing_whitespace = false
